# ros2-gazebo-coil-plugin

./: CMakeLists.txt  README.md  package.xml
include/wibotic_gazebo_plugins/: VersionShim.h  VersionShim.hpp  WiboticCoilPlugin.h  WiboticCoilPlugin.hpp
msgs/: CMakeLists.txt  coil_position.proto
src/: WiboticCoilPlugin.cc  WiboticCoilPlugin.cpp
wibotic_msgs/: CoilPosition.msg
