<?xml version="1.0"?>
<package format="2">
  <name>wibotic_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>Plugins for the WiBotic systems</description>

  <license>BSD</license>
  <author email="info@wibotic.com">WiBotic</author>
  <maintainer email="info@wibotic.com">WiBotic</maintainer>
  
  <url type="repository">https://github.com/wibotic</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>

  <export>
    <gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
  </export>
</package>
