<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wibotic_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>Plugins for the WiBotic systems</description>

  <license>BSD</license>
  <author email="info@wibotic.com">WiBotic</author>
  <maintainer email="info@wibotic.com">WiBotic</maintainer>
  
  <url type="repository">https://github.com/wibotic</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
</package>